<resources>
    <string name="app_name">Registration</string>

    <string name="RegistName">Регистрация с Firebase</string>
    <string name="NameAfter">Регистрация App</string>
    <string name="TextBottom">Ввойдите в свою учетную запись</string>
    <string name="butSignIn">Войти</string>
    <string name="butSignOut">Зарегистрироваться</string>

    ----------------------------------------------------------
    <string name="Sales">Продажи</string>
    <string name="txtContacts">Контакты</string>
    <string name="txtMain">Главная</string>
    <string name="txtAbout">О нас</string>

    <string name="txtCoursec">Courses</string>
    <string name="txtApp">App</string>

    <string name="courses_start_date">Старт обучения:</string>
    <string name="courses_level">Уровень:</string>
</resources>